--- a/t.tex
+++ b/t.tex
@@ -10,8 +10,11 @@
 %\usepackage[style=/home/filip/d/biblatex-phys/phys, articletitle=true, biblabel=enumerate, chaptertitle=true,  
   %pageranges=true, sorting=none, isbn=false, url=false, doi=false, eprint=false, hyperref=true, firstinits=true]{biblatex}
 %\usepackage[unicode=true,pdftitle={\WorkTitle}, pdfauthor={\FirstandFamilyName}, bookmarks=true, colorlinks=true, breaklinks=true, urlcolor=black, citecolor=black, linkcolor=black, breaklinks=true, plainpages=false,pdfpagelabels=true]{hyperref}
-\setcounter{tocdepth}{4} %% XXX
-\setcounter{secnumdepth}{4} %% XXX
+
+%% DEBUGING ONLY, comment out in production version:
+\setcounter{tocdepth}{4} 
+\setcounter{secnumdepth}{4} 
+\usepackage{showkeys}
 
 \addbibresource{fdphd.bib}
 
