before adding the wave-plane-projection tensor

--- a/appendices.tex
+++ b/appendices.tex
@@ -82,6 +82,7 @@ $\omega$ 	& Angular frequency\\
 $\kk$ 		& Wave vector in homogeneous medium\\
 $\KK$ 		& Bloch wave vector in periodic medium\\
 
+$\mathbb{R}$		& Real numbers\\
 $\ii$		& Imaginary unit, $\ii^2 = -1$\\
 $e$ 		& Euler constant, $e = 2.718\ldots$\\
 $h$ 		& Planck constant, $h = 6.626\cdot 10^{-34}$ J s\\
