--- a/theory.tex
+++ b/theory.tex
@@ -266,8 +266,7 @@ It shall be noted here that permittivity $\epsrl$ was introduced as a scalar, as
 	\end{array} \right) \cdot \E
 	\label{eq_}
 \end{equation}
-In some media of lower rotational symmetry (such as many crystals, or liquids under static electric field), the medium response depends on the electric field direction. At the beginning of the chapter, however, we assumed the fields are relatively weak, and we imposed the requirement of \textit{linearity} of the medium. Whatever the linear relation of 
-$$\D := \mathcal{L}(\E)$$
+In some media of lower rotational symmetry (such as many crystals, or liquids under static electric field), the medium response depends on the electric field direction. At the beginning of the chapter, however, we assumed the fields are relatively weak, and we imposed the requirement of \textit{linearity} of the medium. Whatever the linear relation of $\D := \mathcal{L}(\E)$
 is, it must obey the rule
 $$\D_1 + \D_2 = \mathcal{L}(\E_1) + \mathcal{L}(\E_2) = \mathcal{L}(\E_1 + \E_2)$$
 for any vectors $\E_1, \E_2$. Such a relation can be fully described by a \textit{tensor of permittivity} % TODO cite 
@@ -563,23 +562,38 @@ The classical,  symmetric, approach using parameters $\epsrl(\omega,\kk),\murl(\
 %% \cite{agranovich1962crystal}
 %}}}
 
-\subsection{Dispersion relations in homogeneous nonlocal media} % TODO   http://www.wave-scattering.com/negative.html
-\paragraph{How a local dielectric manifests in the Landau-Lifshitz model}  % TODO%{{{
-The dispersion curves and isofrequency contours predicted by the classical and Landau-Lifshitz representation of constitutive parameters should be identical. For a local, isotropic medium, the dispersion has already been shown in Fig. \ref{fg_dcsimpleel}. A very similar figure is shown in \ref{fg_dcll}
-The left panel is identical to that shown in Fig. \ref{fg_dcsimpleel}, as an assumption is made here that the medium is fully described by the \textit{local} permittivity $\epsrl(\omega)$ and permeability $\murl(\omega)$.\\
-The right panel additionally shows the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ as colour contours. The thin black line overlay connects all points where the dispersion equation holds, $\epsLL(\omega, k) \,\omega^2 / k^2 = 1$. As a confirmation of the equivalence of this Landau-Lifshitz model with the classical one, the original green dispersion curve from Fig. \ref{fg_dcsimpleel} is retained that was computed using the classical approach based on the Eq. (\ref{eq_dispeq_loc}). 
-
-\begin{figure}[th] \caption{Dispersion of a local medium, comparing the symmetric and Landau-Lifshitz representation of constitutive parameters. Left column: Local parameters $$, $$ as functions of frequency. Right column: Dispersion curves computed using Eq. () an electric resonance in the local permittivity, 
+\subsection{Dispersion relations in homogeneous nonlocal media} 
+\begin{figure}[th] \caption{Dispersion of a local medium, comparing the symmetric and Landau-Lifshitz representation of constitutive parameters. Left column: Local parameters $$, $$ as functions of frequency. Right column: Dispersion curves computed using Eq. () an electric resonance in the local permittivity, O
 } \label{fg_dcll} \centering  
-	\includegraphics[width=.6\textwidth]{img/dispersion_landau_lifshitz/dispersion_ll_el.pdf}
+	\includegraphics[width=1\textwidth]{img/dispersion_landau_lifshitz/dispersion_ll_el.pdf}
 %\end{figure}
-%\begin{figure}[h] \caption{\todo{Magnetic resonance in L-L view of a local medium}} \label{fg_dcllmag} \centering  %% TODO refto
-	\includegraphics[width=.6\textwidth]{img/dispersion_landau_lifshitz/dispersion_ll_mag.pdf}
+%\begin{figure}[h] \caption1todo{Magnetic resonance in L-L view of a local medium}} \label{fg_dcllmag} \centering  %% TODO refto
+	\includegraphics[width=1\textwidth]{img/dispersion_landau_lifshitz/dispersion_ll_mag.pdf}
 %\end{figure}
-%\begin{figure}[h] \caption{\todo{Overlapping electric and magnetic resonance in L-L view of a local medium}} \label{fg_dcllelmag} \centering  %% TODO refto
-	\includegraphics[width=.6\textwidth]{img/dispersion_landau_lifshitz/dispersion_ll_elmag.pdf}
+%\begin{figure}[h] \caption1todo{Overlapping electric and magnetic resonance in L-L view of a local medium}} \label{fg_dcllelmag} \centering  %% TODO refto
+	\includegraphics[width=1\textwidth]{img/dispersion_landau_lifshitz/dispersion_ll_elmag.pdf}
 \end{figure}
+
+
+\paragraph{How a local dielectric manifests in the Landau-Lifshitz model}  % TODO%{{{
+Both the dispersion curves and the isofrequency contours predicted by the classical and Landau-Lifshitz representations of the constitutive parameters should be identical. This is illustrated by Fig. \ref{fg_dcll} on three examples - of a medium with electric resonance, a magnetic resonance and both resonances overlapping. The left column shows the \textit{local} permittivity $\epsrl(\omega)$ and permeability $\murl(\omega)$.
+
+The right column additionally shows the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ as a colour map with blue tone for negative values and red for positive ones. The thin black line overlay connects all points where the dispersion equation holds. %% , $\epsLL(\omega, k) \,\omega^2 / k^2 = 1$. TODO this is more complicated, as epsLL is a tensor - find which equation to refer to
+As a confirmation of the compatibility of the Landau-Lifshitz model with the classical one, the original green dispersion curve from Fig. \ref{fg_dcsimpleel} is retained, which was computed using the classical approach based on the Eq. (\ref{eq_dispeq_loc}). It can thus be seen that both models always predict exactly the same dispersion.
+
+For a local isotropic medium with a single electric resonance in Fig. \ref{fg_dcll}a, the curves plotted are identical to Fig. \ref{fg_dcsimpleel}. The Landau-Lifshitz permittivity $\epsLL(\omega, k)$ follows a resonance curve in frequency, is independent of the wavenumber $k$ (as long as the medium is local). With frequency increasing, the lower polariton branch bends towards higher $k$, as $\epsLL(\omega, k)$ increases towards the resonance at $\omega_0$, then a band of frequency follows where and no solution of the wave equation %% TODO REF
+exists due to $\epsLL(\omega, k)$ being negative, and finally the upper polariton branch starts when $\epsLL(\omega, k)$ crosses zero and becomes positive again.
+
+A local medium with a single \textit{magnetic} resonance, Fig. \ref{fg_dcll}b, is predicted by the symmetric model to exhibit a similar dispersion curves. At the right panel of Fig. \ref{fg_dcll}b, the magnetic resonance is represented by the
+%%% TODO add Eq. 2.52 repeated with underbrace
+contribution that grows proportionally with $k^2$, and its maximum magnitude is located at the frequency $\omega_{mp}$ where $\murl(\omega_{mp}) = 0$. This shape of $\epsLL(\omega, k)$ causes the lower polariton branch to bend and approach a horizontal asymptote, which is again separated by a band of no allowed wave from the upper polariton branch, starting at $\omega_{mp}$.
+$\epsLL(\omega, k)$
+
+\clearpage
+ %The left panel of Fig. \ref{fg_dcll}a is therefore identical to the previous one. Its left panel is identical to that shown in Fig. \ref{fg_dcsimpleel}, as the medium can still be fully described by 
+
  %(electric quadrupoles..., [Merlin])
+
 %}}}
 \paragraph{Why magnetic resonances do not contribute to static permeability?}%{{{
 %}}}
